--- a/publications.qmd
+++ b/publications.qmd
@@ -4,3 +4,5 @@ format: html
 date-modified: last-modified
 date-format: long
 ---
+
+During+6 years of experience as a research scientist, I have presented my research progress at +5 scientific conferences and produced manuscripts for high-impact journals.
