--- a/publications.qmd
+++ b/publications.qmd
@@ -11,3 +11,6 @@ bibliography: myref.bib
 # Research articles
 
 During+6 years of experience as a research scientist, I have presented my research progress at +5 scientific conferences and produced manuscripts for high-impact journals.
+
+::: {bibliography="myref.bib"}
+:::
