--- a/publications.qmd
+++ b/publications.qmd
@@ -12,5 +12,5 @@ bibliography: myref.bib
 
 During+6 years of experience as a research scientist, I have presented my research progress at +5 scientific conferences and produced manuscripts for high-impact journals.
 
-::: {bibliography="myref.bib"}
+::: {bibliography="myref.bib" print="all"}
 :::
