--- a/myref.bib
+++ b/myref.bib
@@ -1,3 +1,13 @@
+
+@article{santander2024faster,
+  title={Faster model-based estimation of ancestry proportions},
+  author={Santander, Cindy G and Refoyo Martinez, Alba and Meisner, Jonas},
+  journal={bioRxiv},
+  pages={2024--07},
+  year={2024},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
 @article{barrie2024elevated,
   title={Elevated genetic risk for multiple sclerosis emerged in steppe pastoralist populations},
   author={Barrie, William and Yang, Yaoling and Irving-Pease, Evan K and Attfield, Kathrine E and Scorrano, Gabriele and Jensen, Lise Torp and Armen, Angelos P and Dimopoulos, Evangelos Antonios and Stern, Aaron and Refoyo-Martinez, Alba and others},
@@ -20,24 +30,24 @@
   publisher={Public Library of Science}
 }
 
-@article{allentoft2015population,
-  title={Population genomics of bronze age Eurasia},
-  author={Allentoft, Morten E and Sikora, Martin and Sj{\"o}gren, Karl-G{\"o}ran and Rasmussen, Simon and Rasmussen, Morten and Stenderup, Jesper and Damgaard, Peter B and Schroeder, Hannes and Ahlstr{\"o}m, Torbj{\"o}rn and Vinner, Lasse and others},
-  journal={Nature},
-  volume={522},
-  number={7555},
-  pages={167--172},
-  year={2015},
-  publisher={Nature Publishing Group}
-}
-
-@article{allentoft2024100,
-  title={100 ancient genomes show repeated population turnovers in Neolithic Denmark},
-  author={Allentoft, Morten E and Sikora, Martin and Fischer, Anders and Sj{\"o}gren, Karl-G{\"o}ran and Ingason, Andr{\'e}s and Macleod, Ruairidh and Rosengren, Anders and Schulz Paulsson, Bettina and J{\o}rkov, Marie Louise Schjellerup and Novosolov, Maria and others},
+@article{allentoft2024population,
+  title={Population genomics of post-glacial western Eurasia},
+  author={Allentoft, Morten E and Sikora, Martin and Refoyo-Mart{\'\i}nez, Alba and Irving-Pease, Evan K and Fischer, Anders and Barrie, William and Ingason, Andr{\'e}s and Stenderup, Jesper and Sj{\"o}gren, Karl-G{\"o}ran and Pearson, Alice and others},
   journal={Nature},
   volume={625},
   number={7994},
-  pages={329--337},
+  pages={301--311},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{irving2024selection,
+  title={The selection landscape and genetic legacy of ancient Eurasians},
+  author={Irving-Pease, Evan K and Refoyo-Mart{\'\i}nez, Alba and Barrie, William and Ingason, Andr{\'e}s and Pearson, Alice and Fischer, Anders and Sj{\"o}gren, Karl-G{\"o}ran and Halgren, Alma S and Macleod, Ruairidh and Demeter, Fabrice and others},
+  journal={Nature},
+  volume={625},
+  number={7994},
+  pages={312--320},
   year={2024},
   publisher={Nature Publishing Group UK London}
 }
@@ -59,4 +69,15 @@
   pages={1506--1520},
   year={2019},
   publisher={Cold Spring Harbor Lab}
+}
+
+@article{allentoft2024100,
+  title={100 ancient genomes show repeated population turnovers in Neolithic Denmark},
+  author={Allentoft, Morten E and Sikora, Martin and Fischer, Anders and Sj{\"o}gren, Karl-G{\"o}ran and Ingason, Andr{\'e}s and Macleod, Ruairidh and Rosengren, Anders and Schulz Paulsson, Bettina and J{\o}rkov, Marie Louise Schjellerup and Novosolov, Maria and others},
+  journal={Nature},
+  volume={625},
+  number={7994},
+  pages={329--337},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
 }
