--- a/index.qmd
+++ b/index.qmd
@@ -2,14 +2,15 @@
 format: 
     html:
         page-layout: full
-        toc: false
+        toc-location: left 
 ---
 
-# Welcome to my profile
-
+## 🎯 **About Me**
 :::columns
 :::{.column width="80%"}
-Hey! My name is Alba and I am a Sandbox Data Scientist at the Health Data Science Center at the [University of Copenhagen]( https://www.ku.dk/). Throughout my academic career as a PhD student and postdoctoral researcher, I gained strong expertise in large-scale genomics and the development of computational pipelines and environments on computing clusters.
+Hi and welcome to my website! My name is **Alba**, and I’m a **Sandbox Data Scientist** at the Health Data Science Center at the [University of Copenhagen](https://www.ku.dk/). With a strong background in **large-scale genomics** and **pipeline development**, I specialize in building and maintaining computational environments on HPC platforms.  
+
+My work focuses on research, education, and the development of computational tools for bioinformatics and data science. I aim to help researchers **manage research data more effectively** and promote **FAIR (Findable, Accessible, Interoperable, and Reusable) principles**.  
 :::
 
 :::{.column width="20%"}
@@ -19,32 +20,57 @@ Hey! My name is Alba and I am a Sandbox Data Scientist at the Health Data Scienc
 :::
 :::
 
-Currently, my focus is on creating online training modules and providing computational services for researchers. My goal is to help others manage their research data effectively. I provide computational support by offering lectures on tools such as Cookiecutter, Shiny apps, Git, GitHub, Snakemake, Nextflow, Docker, and Conda, which assist in building FAIR (Findable, Accessible, Interoperable, Reusable) pipelines and software to perform data analysis. Additionally, I conduct practical sessions involving hands-on projects, enabling researchers to apply these tools in real-world scenarios. For instance, we deploy SQLite catalogs using Shiny apps, creating a practical and interactive method for exploring and managing data.
+### **What I Do**
 
-I am responsible for maintaining our website, which is written using Quarto, and managing several modules:
+I am part of a team in charge of online training modules and offer computational services for researchers. My focus is on equipping researchers with the skills and tools needed for effective and FAIRly data management and data analysis. This includes offering **lectures, workshops, and computational support** on essential tools for data analysis and reproducibility, including:
 
-- [Computational RDM](https://hds-sandbox.github.io/RDM_NGS_course/): We cover key Research Data Management (RDM) concepts and best practices tailored for the omics field, providing researchers with a toolkit to help them organize, integrate, and visualize their data. These tools will help researchers ease effective data management and reduce the time spent on managing their data. 
-- [HPC Best Practices](https://hds-sandbox.github.io/HPC-lab/): main contributor to `HPC Pipes`. This module serves as an introduction to pipelines and workflows in bioinformatics. We explore two of the main languages, Snakemake and Nextflow, and go through some community-based nf-core pipelines, examining their templates. Additionally, we discuss the structure of processes or rules, the advantages of using these tools, how to set resources, and the importance of benchmarking. We also ensure efficiency and scalability by optimizing pipelines and ultimately reducing the time researchers spend on data management tasks. 
+- 🌀 **Git & GitHub** (for version control and collaboration)  
+- ⚙️ **Snakemake & Nextflow** (for workflow automation)  
+- 🐳 **Docker & Conda** (for containerization and environment management)  
+- 🛠️ **Cookiecutter** (for reproducible project templates)  
+- 💡 **Shiny Apps** (for interactive data visualization)  
 
-As part of the Sandbox project, we develop "apps" that contain notebooks and teaching materials that are containerized using Docker. This allows us to package them into portable and reproducible environments, simplifying deployment and ensuring consistency across different systems. I am currently involved in developing, expanding, and maintaining our applications, which utilize the latest analysis software and tools for omics data analysis.
-
-- [Genomic app](https://hds-sandbox.github.io/modules/)
-- [Transcriptomics app](https://hds-sandbox.github.io/modules/)
-
-### Interests
-- (Health) Data Science
-- (Population) Genomics
-- Research data management
-
-### Education:
-- PhD in Population Genetics (2019-2021)
-- Master in Bioinformatics (2017-2019)
-    - Institution: University of Copenhagen
-- BSc in Health Biology (2013-2017)
-    - Institution: University of Alcalá de Henares
-    - Erasmus Program at Vrije Universiteit Brussels 
-
-## About me 
-I have a deep appreciation for nature and find peace in hiking, while my love for travel brings me adventure and the opportunity to explore other cultures.
+### **My Approach**
+I believe that practical, hands-on learning is essential. That's why I design interactive training material, workshops and real-world projects. All training materials, including web-based exercises, are openly available on the [project's website](https://hds-sandbox.github.io/).
 
 
+## 📦 **Sandbox Project: Training modules & Apps**
+As part of the national **Sandbox Project**, we develop a range of containerized apps and training modules to support researchers in bioinformatics and research data management (RDM). These resources combine notebooks, coding exercises, and interactive learning materials, hosted on a GitHub Pages website built with Quarto. Our materials are fully version-controlled, ensuring consistency, transparency, and easy access to updates. Below are some of the key modules I contribute to:
+
+Two of our training modules are designed to equip researchers with the essential tools and concepts needed to develop effective workflows and manage software in High-Performance Computing (HPC) and Research Data Management (RDM). 
+
+:::{.callout-note}
+### **[Computational RDM](https://hds-sandbox.github.io/RDM_biodata_course/)**
+**Objective**: Equip researchers in the omics field with the best RDM practices, helping them better organize, integrate, and visualize their data.  
+  
+**Key Concepts Covered**:  
+- Research Data Management (RDM) concepts  
+- Best practices in data organization and integration  
+- Tools to support effective data management  
+  
+💡 **Why it matters?** Effective RDM saves time and improves reproducibility for researchers working with large, complex datasets.
+:::
+
+:::{.callout-note}
+# **[HPC Best Practices](https://hds-sandbox.github.io/HPC-lab/)**
+
+**Objective**: Introduce researchers to pipelines and workflows for bioinformatics, especially those on High-Performance Computing (HPC) systems.  
+  
+**Key Concepts Covered**:  
+- Workflow management using **Snakemake** and **Nextflow**  
+- Using community-driven pipelines like **nf-core**  
+- Building efficient and scalable workflows to reduce data management time  
+  
+⚙️ **My Role**: Main contributor to the **HPC Pipes** module. This module demonstrates how to structure workflows, set resources, and optimize performance, helping researchers save time and effort.
+:::
+
+### **Containerized Apps**
+We also create portable, reproducible, and system-agnostic apps using Docker, enabling seamless deployment across platforms. While primarily deployed on Danish HPC systems, all content is openly available on GitHub, allowing others to deploy them on any compatible system.
+
+- **[Genomics App](https://hds-sandbox.github.io/modules/)**: Tools and tutorials for genomic data analysis.  
+- **[Transcriptomics App](https://hds-sandbox.github.io/modules/)**: Tools for working with transcriptomics data.  
+
+:::{.callout-tip appearance="simple"}
+# **Why Containerization?**  
+By containerizing our tools with Docker, we ensure consistent performance across platforms, making it easier for researchers to replicate results.
+:::
