--- a/cv.qmd
+++ b/cv.qmd
@@ -9,7 +9,7 @@ bibliography: myref.bib
 
 ## 📄 **Download my CV**
 
-<a href="./ARMCV.pdf" download="ARM-CV.pdf"> 
+<a href="./ARMCV.pdf" download="ARMCV.pdf"> 
     <button class="btn small-button">Download here</button>
 </a>
 
@@ -18,7 +18,7 @@ bibliography: myref.bib
 ## 📘 **Education**
 | 🎓 **Degree**              | 🏛️ **Institution**                          | 📅 **Year** |
 |----------------------------|---------------------------------------------|-------------|
-| **PhD in Bioinformatcis** | **University of Copenhagen** | **2019 - 2021** |
+| **PhD in Bioinformatics** | **University of Copenhagen** | **2019 - 2021** |
 | **Master in Bioinformatics**    | **University of Copenhagen**             | **2017 - 2019** |
 | **BSc in Health Biology**       | **University of Alcalá de Henares**       | **2013 - 2017** |
 |                             | *Erasmus Program at Vrije Universiteit Brussels* | **2006 - 2017** |
