--- a/myref.bib
+++ b/myref.bib
@@ -2,10 +2,20 @@
 @article{santander2024faster,
   title={Faster model-based estimation of ancestry proportions},
   author={Santander, Cindy G and Refoyo Martinez, Alba and Meisner, Jonas},
-  journal={bioRxiv},
-  pages={2024--07},
-  year={2024},
-  publisher={Cold Spring Harbor Laboratory}
+  journal={Peer Community Journal},
+  volume={4},
+  year={2024}
+}
+
+@article{mccarthy2025circumpolar,
+  title={Circumpolar population structure, diversity and recent evolutionary history of the bearded seal in relation to past and present icescapes},
+  author={McCarthy, Morgan L and Mart{\'\i}nez, Alba Refoyo and Ferguson, Steven H and Rosing-Asvid, Aqqalu and Dietz, Rune and De Cahsan, Binia and Schreiber, Lennart and Lorenzen, Eline D and Hansen, Rikke Guldborg and Stimmelmayr, Raphaela and others},
+  journal={Molecular Ecology},
+  volume={34},
+  number={4},
+  pages={e17643},
+  year={2025},
+  publisher={Wiley Online Library}
 }
 
 @article{barrie2024elevated,
